Fix color panel opening and closing when tapping fast on mobile devices

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,8 @@ $breakpoints: (
 $header-height-small: 2.5rem;
 $header-height-large: 2.5rem;
 
+$color-footer-links: #dd005a;
+
 
 ///////////////////
 // MIXINS
@@ -74,6 +76,9 @@ body {
     padding: 0;
 }
 
+///////////////////
+// HEADER AND FILTERS
+///////////////////
 header {
     position: fixed;
     background-color: #ffffff;
@@ -143,12 +148,61 @@ header {
     }
 }
 
+// FILTER BG COLORS
+.bg-all {
+    background-color: black;
+}
+
+.bg-red {
+    background-color: red;
+}
+
+.bg-pink {
+    background-color: pink;
+}
+
+.bg-orange {
+    background-color: orange;
+}
+
+.bg-yellow {
+    background-color: yellow;
+}
+
+.bg-purple {
+    background-color: purple;
+}
+
+.bg-green {
+    background-color: green;
+}
+
+.bg-blue {
+    background-color: blue;
+}
+
+.bg-brown {
+    background-color: brown;
+}
+
+.bg-white {
+    background-color: white;
+}
+
+.bg-gray {
+    background-color: gray;
+}
+
+// overall wrapper
 .page-wrapper {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
+///////////////////
+// FULLSCREEN COLOR PANEL
+///////////////////
 .color-panel {
     position: fixed;
     top: 0;
@@ -159,7 +213,7 @@ header {
     text-align: center;
     padding: 1rem;
 
-    visibility: hidden;
+    //visibility: hidden;
     opacity: 0;
     transform: scale(0);
 
@@ -172,9 +226,9 @@ header {
 
     cursor: pointer;
 
-    &.is-visibility-shown {
-        visibility: visible;
-    }
+    //&.is-visibility-shown {
+    //    visibility: visible;
+    //}
 
     &.is-shown {
         opacity: 1;
@@ -218,10 +272,11 @@ header {
     display: inline-block;
     padding-left: 1rem;
     padding-right: 1rem;
-    //color: rgba(0, 0, 0, .7);
 }
 
-
+///////////////////
+// BUTTON WRAPPER AND BUTTONS
+///////////////////
 .button-wrapper {
     text-align: center;
     padding: 0;
@@ -268,7 +323,6 @@ button {
     transform: scale(1);
 
     &:hover {
-
         @include min-bp('small') {
             box-shadow: 0 0 8px rgba(0, 0, 0, .6);
             transform: scale(1.05);
@@ -298,7 +352,7 @@ button {
     }
 
     @include min-bp('medium') {
-        width: 33%;
+        width: 33.33%;
     }
 
     @include min-bp('large') {
@@ -310,9 +364,9 @@ button {
     }
 }
 
-
-
+///////////////////
 // FOOTER
+///////////////////
 footer {
     font-size: .825rem;
 }
@@ -323,57 +377,12 @@ footer {
     margin: 6rem auto 3rem auto;
 
     & a {
-        color: #dd005a;
+        color: $color-footer-links;
         text-decoration: none;
-        border-bottom: 1px dotted #dd005a;
+        border-bottom: 1px dotted $color-footer-links;
     }
 
     & a:hover {
-        border-bottom: 1px solid #dd005a;
+        border-bottom: 1px solid $color-footer-links;
     }
-}
-
-// bg colors for filters
-.bg-all {
-    background-color: black;
-}
-
-.bg-red {
-    background-color: red;
-}
-
-.bg-pink {
-    background-color: pink;
-}
-
-.bg-orange {
-    background-color: orange;
-}
-
-.bg-yellow {
-    background-color: yellow;
-}
-
-.bg-purple {
-    background-color: purple;
-}
-
-.bg-green {
-    background-color: green;
-}
-
-.bg-blue {
-    background-color: blue;
-}
-
-.bg-brown {
-    background-color: brown;
-}
-
-.bg-white {
-    background-color: white;
-}
-
-.bg-gray {
-    background-color: gray;
 }
